--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="indexstylesheet.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Devicon para tecnologías -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <title>Alam Dominic</title>
 </head>
 
@@ -36,24 +40,109 @@
                     </li>
                 </ul>
                 <span class="navbar-text">
-                    Desarrollo tus ideas en soluciones 💡
+                    "Desarrollo tus ideas en soluciones"
                 </span>
             </div>
         </div>
     </nav>
     <section id="home">
+        <button id="buttonNightMode" onclick="document.body.classList.toggle('dark')">
+            Modo nocturno: 🌙
+        </button>
+
         <h1>Hola soy Dominic Full Stack developer</h1>
-        <div><p>Bienvenido, me da gusto tenerte aquí</p>
-        <p>Desliza para conocer más</p>
+        <div>
+            <p>Bienvenido, me da gusto tenerte aquí</p>
+            <p>Desliza para conocer más</p>
+        </div>
+        <div class="scroll-down-indicator">
+            ↓
         </div>
     </section>
     <hr>
     <section id="aboutme">
-        <h2>Sobre mi</h2>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-6 text-start">
+                    <img src="mePixel.png" alt="Alam Dominic" class="photoMe">
+                </div>
+                <div class="col-md-6 d-flex align-items-center justify-content-end">
+                    <div class="paragraphAboutMe text-start">
+                        <h2 class="h2Aboutme">Sobre mí</h2>
+                        <p>
+                            Soy un desarrollador Full Stack con experiencia en gestión de proyectos y análisis de datos
+                            orientado a la toma de decisiones. <br>
+                            Familiarizado con tecnologías como Python, Java, JavaScript, HTML, CSS y SQL, así como con
+                            herramientas para visualización de datos.<br>
+                            Vengo del sector industrial, donde lideré equipos, gestioné proyectos y utilicé metodologías
+                            ágiles. Realicé análisis de datos para tomar decisiones de impacto. <br>
+                            Me apasiona la tecnología y busco nuevos retos donde pueda contribuir con ideas frescas y
+                            resultados concretos.<br>
+                            Disfruto crear soluciones prácticas que conecten distintas disciplinas, generando valor real
+                            y medible.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <hr>
     <section id="skills">
         <h2>Habilidades</h2>
+        <h3>Frontend</h3>
+
+        <div class="container text-center">
+            <div class="row align-items-center">
+                <div class="col">
+                    <div class="icon-container" title="JavaScript"><i
+                            class="devicon-javascript-plain colored">javascript</i></div>
+                </div>
+                <div class="col">
+                    <div class="icon-container" title="HTML"><i class="devicon-html5-plain colored">HMTL5</i></div>
+                </div>
+                <div class="col">
+                    <div class="icon-container" title="CSS"><i class="devicon-css3-plain colored">CSS</i></div>
+                </div>
+                <div class="col">
+                    <div class="icon-container" title="Bootstrap"><i
+                            class="devicon-bootstrap-plain colored">Bootstrap</i></div>
+                </div>
+            </div>
+        </div>
+
+        <h3>Backend</h3>
+        <div class="container text-center">
+            <div class="row align-items-center">
+                <div class="col">
+                    <div class="icon-container" title="SQL"><i class="devicon-postgresql-plain colored">SQL</i></div>
+                </div>
+                <div class="col">
+                    <div class="icon-container" title="Java"><i class="devicon-java-plain colored">Java</i></div>
+                </div>
+                <div class="col">
+                    <div class="icon-container" title="Python"><i class="devicon-python-plain colored">Python</i></div>
+                </div>
+                <div class="col">
+                    <div class="icon-container" title="Spring Boot"><i class="devicon-spring-plain colored">Spring
+                            Boot</i></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="icon-circle" title="Git"><i class="devicon-git-plain colored"></i></div>
+        <div class="icon-circle" title="GitHub"><i class="devicon-github-original"></i></div>
+        <div class="icon-circle" title="Figma"><i class="devicon-figma-plain colored"></i></div>
+
+        <!-- No hay íconos exactos, así que usare listas -->
+        <div class="icon-circle" title="Project Management"><span>PM</span></div>
+        <div class="icon-circle" title="Tableau"><span>TB</span></div>
+        <div class="icon-circle" title="Excel"><i class="fa-solid fa-file-excel"></i></div>
+        <div class="icon-circle" title="Agile"><span>Agile</span></div>
+        <div class="icon-circle" title="SCRUM"><span>SCRUM</span></div>
+        <div class="icon-circle" title="Jira"><span>Jira</span></div>
+        <div class="icon-circle" title="Trello"><span>Trello</span></div>
+
+        </div>
     </section>
     <hr>
     <section id="education">
@@ -71,9 +160,13 @@
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="#aboutme" class="nav-link px-2 text-body-secondary">Inicio</a></li>
-            <li class="nav-item"><a href="https://www.linkedin.com/in/alam-dominic-carvajal/" target="_blank" class="nav-link px-2 text-body-secondary">LinkedIn</a></li>
-            <li class="nav-item"><a href="https://github.com/alamdominic" target="_blank" class="nav-link px-2 text-body-secondary">GitHub</a></li>
-            <li class="nav-item"><a href="https://api.whatsapp.com/send/?phone=522224731879&text&type=phone_number&app_absent=0" target="_blank" class="nav-link px-2 text-body-secondary">WhatsApp</a></li>
+            <li class="nav-item"><a href="https://www.linkedin.com/in/alam-dominic-carvajal/" target="_blank"
+                    class="nav-link px-2 text-body-secondary">LinkedIn</a></li>
+            <li class="nav-item"><a href="https://github.com/alamdominic" target="_blank"
+                    class="nav-link px-2 text-body-secondary">GitHub</a></li>
+            <li class="nav-item"><a
+                    href="https://api.whatsapp.com/send/?phone=522224731879&text&type=phone_number&app_absent=0"
+                    target="_blank" class="nav-link px-2 text-body-secondary">WhatsApp</a></li>
             <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
         </ul>
         <p class="text-center text-body-secondary">© 2025 Company, Inc</p>
