--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
 <body data-bs-spy="scroll" data-bs-target="#navbar-scrollspy" data-bs-offset="60" tabindex="0">
     <nav id="navbar-scrollspy" class="navbar sticky-top navbar-expand-lg ">
         <div class="container-fluid" id="navbar">
-            <a class="navbar-brand" href="#home">Alam Dominic</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#aboutme">Sobre mi</a>
                     </li>
@@ -39,24 +41,24 @@
                         <a class="nav-link" href="#contact">Contacto</a>
                     </li>
                 </ul>
-                <span class="navbar-text">
-                    "Desarrollo tus ideas en soluciones"
-                </span>
             </div>
         </div>
     </nav>
-    <section id="home">
-        <button id="buttonNightMode" onclick="document.body.classList.toggle('dark')">
+    <section class="d-flex flex-column justify-content-center align-items-center text-center" style="height: 100vh;"
+        id="home"> <button id="buttonNightMode" onclick="document.body.classList.toggle('dark')">
             Modo nocturno: 🌙
         </button>
-
+        <div>
+            <img src="img/me-removebg-preview.png" alt="Alam Dominic" class="img-fluid" id="alamdominic">
+        </div>
         <h1>Hola soy Dominic Full Stack developer</h1>
         <div>
             <p>Bienvenido, me da gusto tenerte aquí</p>
+            <p>"Desarrollo tus ideas en soluciones"</p>
             <p>Desliza para conocer más</p>
         </div>
         <div class="scroll-down-indicator">
-            ↓
+            <a href="#aboutme" class="scroll-down-indicator">↓</a>
         </div>
     </section>
     <hr>
@@ -64,16 +66,18 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 text-start">
-                    <img src="mePixel.png" alt="Alam Dominic" class="photoMe">
+                    <img src="img/mePixel.png" alt="Alam Dominic" class="photoMe">
                 </div>
                 <div class="col-md-6 d-flex align-items-center justify-content-end">
                     <div class="paragraphAboutMe text-start">
                         <h2 class="h2Aboutme">Sobre mí</h2>
                         <p>
-                            Soy un desarrollador Full Stack con experiencia en gestión de proyectos y análisis de datos
-                            orientado a la toma de decisiones. <br>
-                            Familiarizado con tecnologías como Python, Java, JavaScript, HTML, CSS y SQL, así como con
-                            herramientas para visualización de datos.<br>
+                            Soy desarrollador Full Stack, familiarizado con tecnologías como Python, Java, JavaScript,
+                            HTML, CSS y SQL, así como con
+                            herramientas para visualización de datos. <br>
+                            Con experiencia en gestión de proyectos y análisis de datos orientado a la toma de
+                            decisiones.
+                            <br>
                             Vengo del sector industrial, donde lideré equipos, gestioné proyectos y utilicé metodologías
                             ágiles. Realicé análisis de datos para tomar decisiones de impacto. <br>
                             Me apasiona la tecnología y busco nuevos retos donde pueda contribuir con ideas frescas y
@@ -88,65 +92,121 @@
     </section>
     <hr>
     <section id="skills">
-        <h2>Habilidades</h2>
-        <h3>Frontend</h3>
+        <section id="skills" class="my-5">
+            <div class="container text-center">
+                <h2 class="mb-4">Habilidades</h2>
 
-        <div class="container text-center">
-            <div class="row align-items-center">
-                <div class="col">
-                    <div class="icon-container" title="JavaScript"><i
-                            class="devicon-javascript-plain colored">javascript</i></div>
+                <!-- USANDO AHORA -->
+                <h4 class="mb-3">USING NOW:</h4>
+                <div class="row justify-content-center gy-4">
+                    <div class="col-4 col-sm-2 skill-icon">
+                        <i class="devicon-html5-plain colored"></i>
+                        <p>HTML5</p>
+                    </div>
+                    <div class="col-4 col-sm-2 skill-icon">
+                        <i class="devicon-css3-plain colored"></i>
+                        <p>CSS3</p>
+                    </div>
+                    <div class="col-4 col-sm-2 skill-icon">
+                        <i class="devicon-javascript-plain colored"></i>
+                        <p>JavaScript</p>
+                    </div>
+                    <div class="col-4 col-sm-2 skill-icon">
+                        <i class="devicon-java-plain colored"></i>
+                        <p>Java</p>
+                    </div>
+                    <div class="col-4 col-sm-2 skill-icon">
+                        <i class="devicon-python-plain colored"></i></i>
+                        <p>Python</p>
+                    </div>
+                    <div class="col-4 col-sm-2 skill-icon">
+                        <i class="devicon-mysql-plain colored"></i>
+                        <p>MySQL</p>
+                    </div>
+                    <div class="col-4 col-sm-2 skill-icon">
+                        <i class="devicon-bootstrap-plain colored"></i>
+                        <p>Bootstrap</p>
+                    </div>
+                    <div class="col-4 col-sm-2 skill-icon">
+                        <i class="devicon-git-plain colored"></i>
+                        <p>Git</p>
+                    </div>
+                    <div class="col-4 col-sm-2 skill-icon">
+                        <i class="devicon-figma-plain colored"></i>
+                        <p>Figma</p>
+                    </div>
                 </div>
-                <div class="col">
-                    <div class="icon-container" title="HTML"><i class="devicon-html5-plain colored">HMTL5</i></div>
+
+                <!-- APRENDIENDO -->
+                <h4 class="mt-5 mb-3">LEARNING:</h4>
+                <div class="row justify-content-center gy-4">
+                    <div class="col-4 col-sm-2 skill-icon">
+                        <i class="devicon-react-original colored"></i>
+                        <p>React</p>
+                    </div>
+                    <div class="col-4 col-sm-2 skill-icon">
+                        <i class="devicon-sass-original colored"></i>
+                        <p>SASS</p>
+                    </div>
                 </div>
-                <div class="col">
-                    <div class="icon-container" title="CSS"><i class="devicon-css3-plain colored">CSS</i></div>
-                </div>
-                <div class="col">
-                    <div class="icon-container" title="Bootstrap"><i
-                            class="devicon-bootstrap-plain colored">Bootstrap</i></div>
+
+                <!-- OTROS SKILLS -->
+                <h4 class="mt-5 mb-3">OTHER SKILLS:</h4>
+                <div class="row justify-content-center gy-4">
+                    <div class="col-4 col-sm-2 skill-icon">
+                        <img src="https://cdn-icons-png.flaticon.com/512/197/197374.png" width="48" alt="UK Flag">
+                        <p>Inglés: B2</p>
+                    </div>
+                    <div class="col-4 col-sm-2 skill-icon">
+                        <img src="https://cdn-icons-png.flaticon.com/512/197/197593.png" width="48" alt="Spain Flag">
+                        <p>Español: Nativo</p>
+                    </div>
+                    <div class="col-4 col-sm-2 skill-icon">
+                        <img src="https://cdn-icons-png.flaticon.com/512/197/197571.png" width="48" alt="Spain Flag">
+                        <p>Alemán: Principiante</p>
+                    </div>
+
                 </div>
             </div>
-        </div>
+        </section>
 
-        <h3>Backend</h3>
-        <div class="container text-center">
-            <div class="row align-items-center">
-                <div class="col">
-                    <div class="icon-container" title="SQL"><i class="devicon-postgresql-plain colored">SQL</i></div>
-                </div>
-                <div class="col">
-                    <div class="icon-container" title="Java"><i class="devicon-java-plain colored">Java</i></div>
-                </div>
-                <div class="col">
-                    <div class="icon-container" title="Python"><i class="devicon-python-plain colored">Python</i></div>
-                </div>
-                <div class="col">
-                    <div class="icon-container" title="Spring Boot"><i class="devicon-spring-plain colored">Spring
-                            Boot</i></div>
-                </div>
-            </div>
-        </div>
-
-        <div class="icon-circle" title="Git"><i class="devicon-git-plain colored"></i></div>
-        <div class="icon-circle" title="GitHub"><i class="devicon-github-original"></i></div>
-        <div class="icon-circle" title="Figma"><i class="devicon-figma-plain colored"></i></div>
-
-        <!-- No hay íconos exactos, así que usare listas -->
-        <div class="icon-circle" title="Project Management"><span>PM</span></div>
-        <div class="icon-circle" title="Tableau"><span>TB</span></div>
-        <div class="icon-circle" title="Excel"><i class="fa-solid fa-file-excel"></i></div>
-        <div class="icon-circle" title="Agile"><span>Agile</span></div>
-        <div class="icon-circle" title="SCRUM"><span>SCRUM</span></div>
-        <div class="icon-circle" title="Jira"><span>Jira</span></div>
-        <div class="icon-circle" title="Trello"><span>Trello</span></div>
-
-        </div>
     </section>
     <hr>
     <section id="education">
         <h2>Educación</h2>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Universidad Politécnica de Puebla</h5>
+                            <p class="card-text">Ingeniería En Sistemas Automotrices <br>
+                                sept. 2015 - abr. 2020</p>
+                            <button>Conoce más</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Generation México</h5>
+                            <p class="card-text">Full Stack developer<br>may. 2025 - ago. 202</p>
+                            <button>Conoce más</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Alura Latam</h5>
+                            <p class="card-text">Backend Developer<br> ene. 2023 - oct. 2023</p>
+                            <button>Conoce más</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </section>
     <hr>
     <section id="projects">
@@ -155,11 +215,12 @@
     <hr>
     <section id="contact">
         <h2>Contactame</h2>
+        <h2>Generar formulario con formpree</h2>
     </section>
 
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="#aboutme" class="nav-link px-2 text-body-secondary">Inicio</a></li>
+            <li class="nav-item"><a href="#home" class="nav-link px-2 text-body-secondary">Inicio</a></li>
             <li class="nav-item"><a href="https://www.linkedin.com/in/alam-dominic-carvajal/" target="_blank"
                     class="nav-link px-2 text-body-secondary">LinkedIn</a></li>
             <li class="nav-item"><a href="https://github.com/alamdominic" target="_blank"
@@ -167,7 +228,7 @@
             <li class="nav-item"><a
                     href="https://api.whatsapp.com/send/?phone=522224731879&text&type=phone_number&app_absent=0"
                     target="_blank" class="nav-link px-2 text-body-secondary">WhatsApp</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+            <li class="nav-item"><a href="#aboutme" class="nav-link px-2 text-body-secondary">About</a></li>
         </ul>
         <p class="text-center text-body-secondary">© 2025 Company, Inc</p>
     </footer>
