Subo cambios en educacion

--- a/index.html
+++ b/index.html
@@ -174,39 +174,76 @@
     <hr>
     <section id="education">
         <h2>Educación</h2>
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Universidad Politécnica de Puebla</h5>
-                            <p class="card-text">Ingeniería En Sistemas Automotrices <br>
-                                sept. 2015 - abr. 2020</p>
-                            <button>Conoce más</button>
-                        </div>
+        <div class="card mb-3">
+            <div class="row g-0">
+                <div class="col-md-2">
+                    <img src="/img/generation.jpeg" class="img-fluid rounded-start" alt="generation mexico" style="width: 70%;">
+                </div>
+                <div class="col-md-2">
+                    <div class="card-body">
+                        <h5 class="card-title">Generation México</h5>
+                        <p class="card-text">Java Full Stack developer<br>may. 2025 - ago. 202</p>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Generation México</h5>
-                            <p class="card-text">Full Stack developer<br>may. 2025 - ago. 202</p>
-                            <button>Conoce más</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Alura Latam</h5>
-                            <p class="card-text">Backend Developer<br> ene. 2023 - oct. 2023</p>
-                            <button>Conoce más</button>
-                        </div>
-                    </div>
+                <div class="col-md-8">
+                    <p>Formación intensiva como Desarrollador Java Full Stack Jr. en un programa práctico de 13 semanas
+                        a tiempo completo. Aprendí a desarrollar aplicaciones web completas, desde el frontend hasta el
+                        backend, utilizando Java, Spring Boot, JavaScript, HTML, CSS y bases de datos SQL. Me entrené en
+                        pruebas de software, control de versiones con Git y despliegue en entornos reales. Fortalecí
+                        habilidades blandas como trabajo en equipo, comunicación asertiva, pensamiento crítico,
+                        adaptabilidad, liderazgo colaborativo y gestión del tiempo en entornos de alta demanda.
+                    </p>
                 </div>
             </div>
         </div>
-
+        <div class="card mb-3">
+            <div class="row g-0">
+                <div class="col-md-2">
+                    <img src="/img/Oracle1.png" class="img-fluid rounded-start" alt="alura latm y oracle" style="width: 70%;">
+                </div>
+                <div class="col-md-2">
+                    <div class="card-body">
+                        <h5 class="card-title">Alura Latam </h5>
+                        <p class="card-text">Backend Developer<br> ene. 2023 - oct. 2023</p>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <p>Especialización en desarrollar, estructurar y mantener la lógica del lado del servidor que da
+                        soporte a aplicaciones web. Es una formación intensiva que combina conocimientos de
+                        programación, bases de datos y arquitectura de software, enfocada en crear sistemas robustos,
+                        seguros y escalables.
+                        El desarrollo backend se centra en manejar la lógica, las API y la conexión con bases de datos,
+                        utilizando herramientas como Java con Spring Boot, Python, MySQL y Git. El enfoque es preparar
+                        al desarrollador para construir servicios eficientes, integrables y listos para producción en
+                        entornos reales.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="card mb-3">
+            <div class="row g-0">
+                <div class="col-md-2">
+                    <img src="/img/upp.jpeg" class="img-fluid rounded-start" alt="universidad politecnica de puebla" style="width: 70%;">
+                </div>
+                <div class="col-md-2">
+                    <div class="card-body">
+                        <h5 class="card-title ">Universidad Politécnica de Puebla</h5>
+                        <p class="card-text">Ingeniería En Sistemas Automotrices <br>
+                            sept. 2015 - abr. 2020</p>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <p>
+                        La ingeniería en sistemas automotrices se enfoca en diseñar, desarrollar, analizar y optimizar
+                        los sistemas mecánicos, electrónicos y de software de los vehículos, con el objetivo de hacerlos
+                        más seguros, eficientes y tecnológicos.
+                        Aptitudes: Python · SolidWorks · Gestion de proyectos · Gestión de la producción · Gestión de la
+                        calidad · Análisis de datos · Mecánica de fluidos computacional · Alemán · Inglés · Modelado 3D
+                        ·
+                        CATIA</p>
+                </div>
+            </div>
+        </div>
     </section>
     <hr>
     <section id="projects">
@@ -230,7 +267,7 @@
                     target="_blank" class="nav-link px-2 text-body-secondary">WhatsApp</a></li>
             <li class="nav-item"><a href="#aboutme" class="nav-link px-2 text-body-secondary">About</a></li>
         </ul>
-        <p class="text-center text-body-secondary">© 2025 Company, Inc</p>
+        <p class="text-center text-body-secondary">© 2025 Alamsini Developer</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 </body>
