--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 text-start">
-                    <img src="img/mePixel.png" alt="Alam Dominic" class="photoMe">
+                    <img src="img/meGhibli2.png" alt="Alam Dominic" class="photoMe">
                 </div>
                 <div class="col-md-6 d-flex align-items-center justify-content-end">
                     <div class="paragraphAboutMe text-start">
@@ -124,10 +124,6 @@
                         <p>MySQL</p>
                     </div>
                     <div class="col-4 col-sm-2 skill-icon">
-                        <i class="devicon-bootstrap-plain colored"></i>
-                        <p>Bootstrap</p>
-                    </div>
-                    <div class="col-4 col-sm-2 skill-icon">
                         <i class="devicon-git-plain colored"></i>
                         <p>Git</p>
                     </div>
@@ -145,8 +141,17 @@
                         <p>React</p>
                     </div>
                     <div class="col-4 col-sm-2 skill-icon">
+                        <i class="devicon-bootstrap-plain colored"></i>
+                        <p>Bootstrap</p>
+                    </div>
+                    <div class="col-4 col-sm-2 skill-icon">
                         <i class="devicon-sass-original colored"></i>
                         <p>SASS</p>
+                    </div>
+                    <div class="col-4 col-sm-2 skill-icon">
+                        <img src="https://cdn.worldvectorlogo.com/logos/power-bi-1.svg" alt="Power BI Logo" width="48"
+                            height="48">
+                        <p>Power-Bi</p>
                     </div>
                 </div>
 
@@ -177,12 +182,13 @@
         <div class="card mb-3">
             <div class="row g-0">
                 <div class="col-md-2">
-                    <img src="/img/generation.jpeg" class="img-fluid rounded-start" alt="generation mexico" style="width: 70%;">
+                    <img src="/img/generation.jpeg" class="img-fluid rounded-start" alt="generation mexico"
+                        style="width: 70%;">
                 </div>
                 <div class="col-md-2">
                     <div class="card-body">
                         <h5 class="card-title">Generation México</h5>
-                        <p class="card-text">Java Full Stack developer<br>may. 2025 - ago. 202</p>
+                        <p class="card-text">Java Full Stack developer<br>may. 2025 - ago. 2025</p>
                     </div>
                 </div>
                 <div class="col-md-8">
@@ -199,7 +205,8 @@
         <div class="card mb-3">
             <div class="row g-0">
                 <div class="col-md-2">
-                    <img src="/img/Oracle1.png" class="img-fluid rounded-start" alt="alura latm y oracle" style="width: 70%;">
+                    <img src="/img/Oracle1.png" class="img-fluid rounded-start" alt="alura latm y oracle"
+                        style="width: 70%;">
                 </div>
                 <div class="col-md-2">
                     <div class="card-body">
@@ -223,7 +230,8 @@
         <div class="card mb-3">
             <div class="row g-0">
                 <div class="col-md-2">
-                    <img src="/img/upp.jpeg" class="img-fluid rounded-start" alt="universidad politecnica de puebla" style="width: 70%;">
+                    <img src="/img/uppLogo.png" class="img-fluid rounded-start" alt="universidad politecnica de puebla"
+                        style="width: 70%;">
                 </div>
                 <div class="col-md-2">
                     <div class="card-body">
@@ -247,12 +255,55 @@
     </section>
     <hr>
     <section id="projects">
-        <h2>Poyectos</h2>
+        <h2 class="proyectosHeading">Poyectos</h2>
+        <div class="card mb-3">
+            <img src="img/ProyectoRepairman.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">E-Comerce Reapirman</h5>
+                <p class="card-text">En este proyecto desarrolle una aplicacion web para un cliente real, permite
+                    realizar citas para sus reparaciones, mostrar el estado de reparacion de sus equipos, asi mismo
+                    comparar o vender su telefono desde la comodidad de su casa. </p>
+                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+            </div>
+        </div>
+        <div class="card mb-3">
+            <img src="img/ProyectoConversorTemperatura.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Conversor de temperatura</h5>
+                <p class="card-text">Este proyecto es una sencilla aplicación web que permite al usuario ingresar una
+                    temperatura en grados Celsius y visualizar su conversión a grados Fahrenheit y Kelvin. Los
+                    resultados se muestran dinámicamente en tarjetas visuales, facilitando la comparación y comprensión
+                    de las diferentes escalas de temperatura.</p>
+                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+            </div>
+        </div>
     </section>
     <hr>
     <section id="contact">
-        <h2>Contactame</h2>
-        <h2>Generar formulario con formpree</h2>
+        <h2 class="text-center">Pongámonos en contacto</h2>
+        <div class="container">
+            <div class="row justify-content-center align-items-center text-center" style="min-height: 100vh;">
+                <div class="col-md-5 d-flex flex-column align-items-center mb-4" id="infoContact">
+                    <h4 class="mb-3">Si llegaste hasta aquí, te invito a dejarme tus datos para que pueda ponerme en
+                        contacto contigo</h4>
+                    <img src="img/me3Ghibli.png" class="meGhibli" alt="Alam Ghibli">
+                </div>
+                <div class="col-md-6 d-flex justify-content-center">
+                    <form action="https://formspree.io/f/meokbegp" method="post" class="formularioContacto">
+                        <label for="name">Tu nombre: </label>
+                        <input name="text" id="name" type="name" placeholder="Escribe tu nombre" required>
+                        <label for="email">Tu correo: </label>
+                        <input name="email" id="email" type="email" placeholder="Ejemplo: tucorreo@mail.com" required>
+                        <label for="phone">Tu numero de celular: </label>
+                        <input name="phone" id="phone" type="phone" placeholder="Ejemplo: 222 234 5678" required>
+                        <label for="message">Mensaje:</label>
+                        <textarea name="message" id="message" placeholder="Déjame un mensaje" required></textarea>
+                        <hr>
+                        <button type="submit">Enviar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer class="py-3 my-4">
@@ -265,7 +316,6 @@
             <li class="nav-item"><a
                     href="https://api.whatsapp.com/send/?phone=522224731879&text&type=phone_number&app_absent=0"
                     target="_blank" class="nav-link px-2 text-body-secondary">WhatsApp</a></li>
-            <li class="nav-item"><a href="#aboutme" class="nav-link px-2 text-body-secondary">About</a></li>
         </ul>
         <p class="text-center text-body-secondary">© 2025 Alamsini Developer</p>
     </footer>
